fix: Resolve initial backdrop image not showing

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	background: url('images/1.jpg') center no-repeat;
+	background: url('/images/1.jpg') center no-repeat;
 	background-size: cover;
 	height: 100vh;
 	display: flex;
@@ -23,7 +23,7 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	opacity: 0.9;
+	opacity: 0.85;
 	z-index: -1;
 }
 
